Add MainLayout and Styling For All Views, Configure App to Use Static FIles.
Adds MainLayout with styling, configure app to search for static files in wwwroot folder.

--- a/BDWeb/BDWeb.csproj
+++ b/BDWeb/BDWeb.csproj
@@ -8,4 +8,12 @@
     <Folder Include="Views\Projects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\lib\styles\MainLayoutStyle.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.6" />
+  </ItemGroup>
+
 </Project>
